<resources>
    <string name="app_name">Look</string>
    <string name="title_zhihu">知乎日报</string>
    <string name="title_news">网易头条</string>
    <string name="title_gank">干货集中营</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">关于</string>
    <string name="action_setting">设置</string>
    <string name="menu_theme">主题</string>
    <string name="loading_error">加载失败</string>
    <string name="retry">重试</string>
    <string name="loading_more">加载更多</string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>

</resources>
