<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_zhihu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_zhihu"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_news"/>
        <item
            android:id="@+id/nav_gank"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_gank"/>
    </group>

    <!--item嵌套-->
    <item android:title="@string/action_setting">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_theme"
                app:actionLayout="@layout/action_view_switch"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_setting"/>
        </menu>
    </item>

</menu>
